[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "fm-automate"
version = "0.0.1"
description = "Tools collection to automate playing of Football Manager 2019"
requires-python = "==3.13.10"
dependencies = [
    "mss==10.1.0",                       # to take screenshots
    "pillow==12.0.0",                    # to save some images to files for easier review
    "pygetwindow==0.0.9",                # for easier ui control
    "pynput==1.8.1",                     # for ui control
    "tensorflow==2.20.0"                 # for the ml model
]

[project.optional-dependencies]
dev = [
    "black==24.8.0",                     # Formatter
    "isort==5.13.2",                     # Import sorting
]

[tool.hatch.build.targets.wheel]
packages = ["main.py"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
